--- a/indrx.html
+++ b/indrx.html
@@ -56,7 +56,7 @@
 
     <div class="filter">
       <button onclick="filterPets('all')">All</button>
-      <button onclick="filterPets('dog')">Dogs</button>
+      <button onclick="filterPets('dog')">kUKKA</button>
       <button onclick="filterPets('cat')">Cats</button>
     </div>
 
