--- a/indrx.html
+++ b/indrx.html
@@ -57,7 +57,7 @@
     <div class="filter">
       <button onclick="filterPets('all')">All</button>
       <button onclick="filterPets('dog')">kUKKA</button>
-      <button onclick="filterPets('cat')">Cats</button>
+      <button onclick="filterPets('cat')">pilli</button>
     </div>
 
     <div id="petList" class="pet-grid"></div>
